# binderdump

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile_arch  README.md  binder_wrapper.h  build.rs  deny.toml
binderdump/: Cargo.toml  build.rs
binderdump-aidl/: Cargo.toml  build.rs
binderdump-aidl/data/: PROVENANCE.md
binderdump-aidl/data/aosp/: README.md
binderdump-aidl/data/aosp/android-33/aidl/android/accounts/: IAccountAuthenticator.aidl
binderdump-aidl/data/aosp/android-33/aidl/android/app/: GameState.aidl  IActivityManager.aidl  IBackupAgent.aidl  ILocaleManager.aidl  IUiModeManager.aidl  IWallpaperManager.aidl  IWallpaperManagerCallback.aidl  Notification.aidl  NotificationChannelGroup.aidl  NotificationHistory.aidl  ProfilerInfo.aidl  ResultInfo.aidl  WaitResult.aidl
binderdump-aidl/data/aosp/android-33/aidl/android/apphibernation/: IAppHibernationService.aidl
binderdump-aidl/data/aosp/android-33/aidl/android/gui/: IHdrLayerInfoListener.aidl  ITransactionTraceListener.aidl
binderdump-aidl/data/aosp/android-33/aidl/android/hardware/: IConsumerIrService.aidl
binderdump-aidl/data/aosp/android-33/aidl/android/net/: INetworkScoreCache.aidl  TetheredClient.aidl
binderdump-aidl/data/aosp/android-33/aidl/android/os/: ConnectionInfo.aidl  IRemoteCallback.aidl  IServiceManager.aidl  IStoraged.aidl  IVibratorStateListener.aidl  StatsBootstrapAtom.aidl
binderdump-aidl/data/aosp/android-33/aidl/android/speech/: IRecognitionService.aidl
binderdump-aidl/data/aosp/android-33/aidl/android/view/: IWindow.aidl
binderdump-aidl/data/aosp/android-33/aidl/android/window/: StartingWindowInfo.aidl
binderdump-aidl/data/aosp/android-33/hal/boot/1.0/: IBootControl.hal
binderdump-aidl/data/aosp/android-33/hal/broadcastradio/1.0/: types.hal
binderdump-aidl/data/aosp/android-33/hal/contexthub/1.0/: types.hal
binderdump-aidl/data/aosp/android-33/hal/gnss/2.0/: IGnss.hal
binderdump-aidl/data/aosp/android-33/hal/radio/1.0/: ISap.hal
binderdump-aidl/data/aosp/android-33/hal/radio/1.3/: types.hal
binderdump-aidl/data/aosp/android-34/aidl/android/accessibilityservice/: IAccessibilityServiceConnection.aidl
binderdump-aidl/data/aosp/android-34/aidl/android/accounts/: IAccountAuthenticator.aidl
binderdump-aidl/data/aosp/android-34/aidl/android/app/: ContentProviderHolder.aidl  GameModeConfiguration.aidl  GameModeInfo.aidl  (+5 more)
binderdump-aidl/data/aosp/android-34/aidl/storage/: IGlobalParametersService.aidl  ISetupParametersService.aidl
binderdump-aidl/data/aosp/android-35/aidl/storage/: ISetupParametersService.aidl
binderdump-aidl/data/aosp/android-36/aidl/: IDnsResolver.aidl
binderdump-aidl/data/aosp/android-36/aidl/storage/: IGlobalParametersService.aidl
binderdump-aidl/data/aosp/android-37/aidl/: IDeviceLockControllerService.aidl  IDnsResolver.aidl  ResolverHostsParcel.aidl  ResolverOptionsParcel.aidl  ResolverParamsParcel.aidl
binderdump-aidl/data/aosp/android-37/aidl/storage/: IGlobalParametersService.aidl  ISetupParametersService.aidl
binderdump-aidl/data/native/: README.md
binderdump-aidl/data/native/android-33/aidl/drm/: IDrmManagerService.aidl  IDrmServiceListener.aidl
binderdump-aidl/data/native/android-35/aidl/drm/: IDrmManagerService.aidl  IDrmServiceListener.aidl
binderdump-aidl/data/native/android-36/aidl/drm/: IDrmManagerService.aidl  IDrmServiceListener.aidl
binderdump-aidl/data/native/android-37/aidl/drm/: IDrmManagerService.aidl  IDrmServiceListener.aidl
binderdump-aidl/src/: aosp_layout.rs  binder_object.rs  decode.rs  decode_hidl.rs  lib.rs  model.rs  native_interfaces.rs  native_struct.rs  registry.rs  token.rs
binderdump-aidl/src/native_struct/: framework.rs  intent.rs  layer_state.rs  mod.rs  transaction_stats.rs
binderdump-aidl/src/parser/: aidl.rs  hidl.rs  mod.rs
binderdump-aidl/tests/: corpus_parses.rs
binderdump-derive/: Cargo.toml
binderdump-derive/src/: helpers.rs  lib.rs  parse.rs  parse_const_offsets.rs  parse_epan.rs
binderdump-derive/tests/: macro_tests.rs
binderdump-dissector/: Cargo.toml  build.rs
binderdump-dissector/src/: aidl_resolve.rs  binderdump.rs  col_info.rs  decode_status.rs  dissect_flat_objects.rs  dissect_offsets.rs  dissect_parcel.rs  epan.rs  epan_plugin.rs  epan_utils.rs  follow_stream.rs  header_fields.rs  header_fields_manager.rs  lib.rs  reply_correlation.rs  reply_postdissector.rs  txn_complete_tracker.rs  txn_link.rs  version_check.rs
binderdump-dissector/tests/: dissect.rs  regen_bundle_fixture.sh  regen_fixture.sh  regen_map_fixture.sh  regen_parcelable_fixture.sh  regen_reply_fixture.sh  regen_union_fixture.sh
binderdump-dissector/tests/fixtures/: bundle.pcapng  hidl_vanilla.pcapng  map.pcapng  parcelable.pcapng  reply.pcapng  sample.pcapng  set_transaction_state.pcapng  union.pcapng
binderdump-epan/: Cargo.toml
binderdump-epan-sys/: Cargo.toml  build.rs
binderdump-epan-sys/src/: epan.rs  lib.rs  wireshark_shims.c  wireshark_shims.h  wireshark_wrapper.h
binderdump-epan/src/: dissector.rs  epan_plugin.rs  lib.rs
binderdump-structs/: Cargo.toml
binderdump-structs/src/: binder_serde.rs  binder_types.rs  bwr_layer.rs  errors.rs  event_layer.rs  lib.rs  link_layer.rs  pos_rwvalue.rs
binderdump-structs/src/binder_serde/: de.rs  error.rs  ser.rs
binderdump-structs/src/binder_types/: binder_command.rs  binder_return.rs  bwr_trait.rs  transaction.rs
binderdump-structs/src/serde/: de.rs  error.rs  ser.rs
binderdump/src/: bin.rs  binder.rs  capture.rs  pcapng.rs
binderdump/src/binder/: binder_command.rs  binder_return.rs  gen.rs
binderdump/src/bpf/: binder.bpf.c  common_types.h  log.h  maps.h  offsets.bpf.c  process_state.h  trace_binder.h  utils.h
binderdump/src/capture/: btf_probe.rs  events.rs  offset_solver.rs  process_cache.rs  ringbuf.rs  system_property.rs  tracepoints.rs
binderdump/src/pcapng/: builders.rs  bwr_layer.rs  capture_info.rs  event_layer.rs  events_aggregator.rs  packets.rs
binderdump/tests/: test_capture.rs
(+2797 files in other folders)
