cargo-features = ["per-package-target"]
[workspace]

members = [
    "binderdump",
    "binderdump-sys",
    "binderdump-structs",
    "binderdump-dissector",
    "binderdump-derive",
    "binderdump-epan-sys",
    "binderdump-trait",
    "binderdump-aidl",
]

resolver = "2"

[workspace.package]
license = "MIT"
