cargo-features = ["per-package-target"]

[package]
name = "binderdump-derive"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"

[lib]
proc-macro = true

[dependencies]
binderdump-trait = { version = "0.1.0", path = "../binderdump-trait" }
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.68", features = ["extra-traits"] }
