cargo-features = ["per-package-target"]

[package]
name = "binderdump-dissector"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"

[lib]
crate-type = ["cdylib"]

[dependencies]
binderdump-structs = { path = "../binderdump-structs" }
binderdump-trait = { path = "../binderdump-trait" }
binderdump-epan-sys = { path = "../binderdump-epan-sys" }
bitmask = "0.5.0"
lazy_static = "1.4.0"
anyhow = "1.0.86"
