cargo-features = ["per-package-target"]

[package]
name = "binderdump-epan-sys"
version = "1.0.1"
edition = "2021"
license.workspace = true
links = "wireshark"
forced-target = "x86_64-unknown-linux-gnu"

[lib]
doctest = false

[dependencies]


[build-dependencies]
bindgen = "0.72.1"
cc = "1"
pkg-config = "0.3.30"
