cargo-features = ["per-package-target"]

[package]
name = "binderdump-epan"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"

[dependencies]
binderdump-epan-sys = { version = "0.1.0", path = "../binderdump-epan-sys" }
binderdump-trait = { version = "0.1.0", path = "../binderdump-trait" }
anyhow = "1.0.86"

[dev-dependencies]
binderdump-derive = { version = "0.1.0", path = "../binderdump-derive" }
