cargo-features = ["per-package-target"]

[package]
name = "binderdump-structs"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"

[dependencies]
anyhow = "1.0.86"
binrw = "0.14.0"
binderdump-sys = { path = "../binderdump-sys" }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
nix = { version = "0.29.0", features = ["ioctl"] }
plain = "0.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_repr = "0.1.19"
thiserror = "1.0.61"
