[package]
name = "binderdump-structs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
binderdump-sys = { path = "../binderdump-sys" }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
nix = { version = "0.29.0", features = ["ioctl"] }
plain = "0.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_repr = "0.1.19"
thiserror = "1.0.61"
byteorder = "1.5.0"
binderdump-derive = { version = "0.1.0", path = "../binderdump-derive" }
binderdump-trait = { version = "0.1.0", path = "../binderdump-trait" }

[dev-dependencies]
pretty_assertions = "1.4.0"
